# al_active_dev

./: .gitignore  README.md  archive_mcsc.sh  home_side_migration.sh  pyproject.toml
al_pipeline/acquisition/: ehvi.py
al_pipeline/cli/: child.py  master.py  moe_diagnostic.py  moe_forward_diagnostic.py  moe_regime_oof.py
al_pipeline/core/: __init__.py  config.py  logging.py  paths.py
al_pipeline/data_prep/: __init__.py  data_loading.py  features.py  labels.py  parents.py  simulation_candidates.py
al_pipeline/diagnostic/: __init__.py  _common.py  al_forward.py  al_regime_oof.py  al_retrospective.py
al_pipeline/featurization/: sequence_featurizer.py  sequence_featurizer_numba.py
al_pipeline/ga/: augmentation.py  ga_utils.py  geneticalgorithm_m2.py  run_ga.py
analysis/: process_diff_sims.py  process_eos_sims.py
beam_search/: append_missing_ps_endpoints.py  collect_results.py  policy.py  prepare_endpoints.py  resume_phase_separated.sh  run_beams.sh  run_beams_mpi.py  run_beams_resume.sh
config/: cluster.env  environment.yml
simulation/: make_diff.py  make_eos.py
slide_data/: build_slide_data.py
submit/: al_master.sh  al_master_acq_test.sh  diff_calc.sh  eos_calc.sh  init_beams.sh  make_diff.sh  make_eos.sh  moe_diagnostic.sh  moe_forward_diagnostic.sh  moe_regime_oof.sh  prepare_endpoints.sh  process_diff_sims.sh  process_eos_sims.sh  run_acq_sweep.sh  run_beams.sh  run_moe_diagnostic_sweep.sh  run_moe_start_iter_diagnostic_sweep.sh  run_prep_endpoints.sh  run_test_suite.sh
tests/: conftest.py
utils/: gen_umap.py  pareto_methods.py  plotting.py
(+53 files in other folders)
